# SourceSwitcher

./: .clang-format  CMakeLists.txt  readme.md
src/: SourceSwitcher.cpp  SourceSwitcher.h  main.cpp
